# vu1-dial-python-module

./: CLAUDE.md  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: api.md
src/vudials_client/: vudialsclient.py
tests/: conftest.py  test_vudialsclient.py
