[build-system]
requires = ["requests", "hatchling"]
build-backend = "hatchling.build"

[project]
name = "vudials_client"
dependencies = [
        "requests>=2.32.5"
]
version = "2025.9.3"
authors = [
  { name="Erin L. Kolp", email="erinlkolpfoss@gmail.com" },
]
description = "A python client module for VU1 Dials from Streacom"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "responses>=0.25",
    "pytest-cov>=5.0",
]

[project.urls]
Homepage = "https://github.com/erinlkolp/vu1-dial-python-module"
Issues = "https://github.com/erinlkolp/vu1-dial-python-module/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["src/vudials_client"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
